Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7858

qml2puppet missing when switching to Designer for QtQuick2 application

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 2.7.0
    • Qt Creator 2.6.0, Qt Creator 2.7.0
    • Quick Designer
    • Windows 7 x86, Ubuntu 11.04 32bit, Qt 4.8.4, Qt 5.0 RC2

      When using a QtQuick2 application project and switching to Designer view Creator complains about missing qml2puppet inside the bin path of Creator.

      Steps to reproduce:

      • create a QtQuick2 application project
      • switch to Designer

      Expected result:

      • Creator switches correctly to the Designer (and provides qml2puppet by itself) OR
      • Creator points me to where I can get/compile qml2puppet

      Current result:

      • Creator tells me there's no qml2puppet (see attached png)

        1. Screenshot.png
          Screenshot.png
          32 kB
        2. puppet.png
          puppet.png
          27 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thohartm Thomas Hartmann
            cstenger Christian Stenger
            Votes:
            8 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes