QmlDesigner: do not show warning for qml2puppet in 2.6

Since Qt Quick 2.0 is not supported the message about the
missing qml2puppet is just confusing.

Task-number: QTCREATORBUG-7858

Change-Id: I4c4454ff1179459456523b540cee7d395aaf8c5c
Reviewed-by: Christian Stenger <christian.stenger@digia.com>
Reviewed-by: Eike Ziller <eike.ziller@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>
Reviewed-by: Marco Bubke <marco.bubke@digia.com>