src/plugins/qmldesigner/designercore/instances/nodeinstanceserverproxy.cpp
@@ -194,21 +194,23 @@ NodeInstanceServerProxy::NodeInstanceServerProxy(NodeInstanceView *nodeInstanceV
            }
 
        } else {
-           QMessageBox::warning(0, tr("Cannot Start QML Puppet Executable"),
-                                tr("The executable of the QML Puppet process (%1) cannot be started. "
-                                   "Please check your installation. "
-                                   "QML Puppet is a process which runs in the background to render the items.").
-                                arg(applicationPath));
+           if (!hasQtQuick2(m_nodeInstanceView.data()))
+               QMessageBox::warning(0, tr("Cannot Start QML Puppet Executable"),
+                                    tr("The executable of the QML Puppet process (%1) cannot be started. "
+                                       "Please check your installation. "
+                                       "QML Puppet is a process which runs in the background to render the items.").
+                                    arg(applicationPath));
        }
 
        m_localServer->close();
 
    } else {
-       QMessageBox::warning(0, tr("Cannot Find QML Puppet Executable"),
-                            tr("The executable of the QML Puppet process (%1) cannot be found. "
-                               "Please check your installation. "
-                               "QML Puppet is a process which runs in the background to render the items.").
-                            arg(applicationPath));
+       if (!hasQtQuick2(m_nodeInstanceView.data()))
+           QMessageBox::warning(0, tr("Cannot Find QML Puppet Executable"),
+                                tr("The executable of the QML Puppet process (%1) cannot be found. "
+                                   "Please check your installation. "
+                                   "QML Puppet is a process which runs in the background to render the items.").
+                                arg(applicationPath));
    }
 }
 
